--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src="https://kit.fontawesome.com/7205e94fe7.js" crossorigin="anonymous"></script>
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>Kevin Chen's Website</title>
   </head>
   <body>
     <noscript>
